--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div class="score">
         <span class="score_title"></span>
         <span class="score_val"></span>
+        <span class="best_score_title"></span>
+        <span class="best_score_val"></span>
     </div>
 </body>
 </html>
